--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
     "next": "^15.4.1",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -50,8 +50,10 @@
     "recharts": "^2.15.0",
     "redux": "^5.0.1",
     "shadcn": "^1.0.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
