--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.51.0",
+    "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,24 +48,25 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "recharts": "^2.15.0",
+    "recharts": "^2.15.4",
     "redux": "^5.0.1",
     "shadcn": "^1.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.6",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "supabase": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   }
 }
