--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.51.0",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
