fix: running backend commands in root dir

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd ~/doro-study
+            cd ~/doro-study/backend
             git stash --include-untracked
             git pull
             
