--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@shadcn/ui": "^0.0.4",
     "@stepperize/react": "^5.1.6",
@@ -54,6 +55,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.23.12",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.0",
