--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.17.0",
     "lucide-react": "^0.469.0",
+    "media-chrome": "^4.13.0",
     "motion": "^12.23.12",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
