--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
     "build": "cross-env NODE_ENV=production && tsc --build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.878.0",
+    "@aws-sdk/s3-request-presigner": "^3.878.0",
     "@supabase/supabase-js": "^2.55.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
