--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@sanity/image-url": "^2.0.2",
     "@shadcn/ui": "^0.0.4",
     "@stepperize/react": "^5.1.6",
     "@supabase/ssr": "^0.5.2",
@@ -58,6 +59,7 @@
     "media-chrome": "^4.13.0",
     "motion": "^12.23.12",
     "next": "15.5.9",
+    "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.0",
     "react": "^19.0.0",
